# evo

./: .coverage  .gitignore  .gitmodules  README.md  TODO.md  coverage.json  demo.py  main.py  pyproject.toml
.iflow/: manifest.json
evo/: .coverage  .gitignore  TODO.md  __init__.py  config.py  coverage.json  main.py  pyproject.toml  validation.py
evo/action/: __init__.py
evo/capability/: __init__.py
evo/exploration/: __init__.py
evo/feedback/: __init__.py
evo/goal/: __init__.py
evo/handler/: __init__.py
evo/integrative_core/: __init__.py
evo/llm/: __init__.py  llm_client_iflow.py  llm_client_openrouter.py
evo/llm/base/: __init__.py  llm_client_base.py
evo/memory/: __init__.py
evo/metacognition/: __init__.py
evo/safety/: __init__.py
evo/src/evo/: __init__.py  config.py  logging.py  types.py  validation.py
evo/src/evo/action/: __init__.py
evo/src/evo/capability/: __init__.py
evo/src/evo/decision/: __init__.py
evo/src/evo/exploration/: __init__.py
evo/src/evo/feedback/: __init__.py
evo/src/evo/goal/: __init__.py
evo/src/evo/integrative_core/: __init__.py
evo/src/evo/memory/: __init__.py
evo/src/evo/metacognition/: __init__.py
evo/tests/: test_action_layer.py  test_async_cleanup.py  test_capability_registry.py  test_goal_engine.py  test_handler.py  test_integrative_core.py  test_main.py  test_memory_system.py  test_metacognition.py  test_perception_gateway.py  test_priority_configuration.py  test_safety_layer.py  test_safety_layer_coverage.py  test_search_optimization.py
evo/tests/integration/: test_safety_mode_flow.py.bak
(+52 files in other folders)
