[project]
name = "evo"
version = "0.1.0"
description = "Self-Evolving AI System"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "chromadb>=1.5.0",
    "openai>=2.20.0",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.0.0",
]

[project.scripts]
evo = "evo.main:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
asyncio_mode = "auto"
addopts = "--cov=evo --cov-report=term-missing --cov-fail-under=90"
